@@ -79,11 +79,99 @@ class PointGreyLockCamera(hardwareModule.HardwareModule):
                                                            parameters = configuration.get("camera_parameters"))
         elif (configuration.get("single_spot", False)):
             self.camera = pointGreyLockCamera.SSLockCamera(camera_id = configuration.get("camera_id"),
-                                                           parameters = configuration.get("camera_parameters"))            
-
+                                                           parameters = configuration.get("camera_parameters"))
         self.camera_functionality = PGQPDAutoFocusFunctionality(camera = self.camera,
                                                                 parameters = configuration.get("parameters"),
                                                                 units_to_microns = configuration.get("units_to_microns"))
+
+
+    def cleanUp(self, qt_settings):
+        self.camera_functionality.wait()
+        self.camera = None
+
+    def getFunctionality(self, message):
+        if (message.getData()["name"] == self.module_name):
+            message.addResponse(halMessage.HalMessageResponse(source = self.module_name,
+                                                              data = {"functionality" : self.camera_functionality}))
+
+    def processMessage(self, message):
+        
+        if message.isType("get functionality"):
+            self.getFunctionality(message)            
+
+
+
+
+
+
+
+class TwoSpotFocusFunctionality(hardwareModule.HardwareFunctionality, lockModule.QPDCameraFunctionalityMixin):
+    qpdUpdate = QtCore.pyqtSignal(dict)
+    # threadUpdate = QtCore.pyqtSignal(dict)  # not sure we need this
+
+    def __init__(self, camera = None, **kwds):
+        super().__init__(**kwds)
+        self.camera = camera
+        self.camera.cameraUpdate.connect(self.handleCameraUpdate)
+        self.started = False
+
+    def adjustAOI(self, dx, dy):
+        self.camera.adjustAOI(dx, dy)
+        
+    def adjustZeroDist(self, inc):
+        self.camera.adjustZeroDist(inc)
+
+    def handleCameraUpdate(self, qpd_dict):
+        #
+        # We are bouncing the signal here so that we can adjust the offset value. Like
+        # with the Thorlabs cameras this may also improve the update speed, but this
+        # was not tested.
+        #
+        qpd_dict["offset"] = qpd_dict["offset"] * self.units_to_microns
+        self.qpdUpdate.emit(qpd_dict)
+
+    def getMinimumInc(self):
+        #
+        # The minimum step size of AOI adjustments for these cameras is 8 pixels.
+        #
+        return 8
+        
+    def getOffset(self):
+        #
+        # lockControl.LockControl will call this each time the qpdUpdate signal
+        # is emitted, but we only want to start the camera once.
+        #
+        if not self.started:
+            self.camera.startCamera()
+            self.started = True
+            
+    def wait(self):
+        self.camera.stopCamera()
+            
+
+
+
+
+class PointGreyLockCameraTwoSpot(hardwareModule.HardwareModule):
+    """
+    HAL module that interfaces with a Point Grey camera (for a focus lock) as a QPD style (uc480 style)
+    focus locks. 
+    """
+    def __init__(self, module_params = None, qt_settings = None, **kwds):
+        super().__init__(**kwds)
+        self.camera = None
+        self.camera_functionality = None
+
+        configuration = module_params.get("configuration")
+
+        self.camera = pointGreyLockCamera.CameraQPD(camera_id = configuration.get("camera_id"),
+                                                       parameters = configuration.get("camera_parameters"))
+        self.camera_functionality = TwoSpotFocusFunctionality(camera = self.camera,
+                                                                parameters = configuration.get("parameters"),
+                                                                units_to_microns = configuration.get("units_to_microns"))
+
+        
+
 
     def cleanUp(self, qt_settings):
         self.camera_functionality.wait()
